# crewai-agent-demo

./: .gitignore
browseai_demo/: README.md  pyproject.toml  report.md
browseai_demo/src/browseai_demo/: crew.py  main.py
browseai_demo/src/browseai_demo/config/: agents.yaml  tasks.yaml
