[project]
name = "browseai_demo"
version = "0.1.0"
description = "browseai-demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
browseai_demo = "browseai_demo.main:run"
run_crew = "browseai_demo.main:run"
train = "browseai_demo.main:train"
replay = "browseai_demo.main:replay"
test = "browseai_demo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
